--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN5oAHS3JBd5FDmNJDKghGQ",
+      "authorship_tag": "ABX9TyM99mxz2NH/L+LbF8RVAHWT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,28 +74,17 @@
         "print(move_)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
-        },
-        "id": "nCoBoSk5eDiF",
-        "outputId": "9e38df78-178c-4526-a54c-7aae0a439d0c"
+        "id": "nCoBoSk5eDiF"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-3e08131e204a>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    while A < house_:\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#백준 10250번 ACM 호텔\n",
+        "#문제 URL : https://www.acmicpc.net/problem/10250\n",
+        "\n",
         "num_ = int(input())\n",
         "\n",
         "for i in range(num_):\n",
