Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM99mxz2NH/L+LbF8RVAHWT",
+      "authorship_tag": "ABX9TyM8FP2+NObCRTESzT0tKQF6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "id": "GitDNhRMrpZQ",
         "outputId": "fb2aba5a-8345-435e-f0ec-4ce489177e15"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
         "id": "0X_uc-dqfDSW",
         "outputId": "48eb86c6-55af-4d87-8c86-1b81c5e45402"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,6 +116,206 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2775번 부녀회장이 될테야\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2775\n",
+        "\n",
+        "Num_ = int(input()) \n",
+        "for _ in range(Num_): \n",
+        "    k = int(input()) \n",
+        "    n = int(input())  \n",
+        "    p = [ i for i in range(1, n+1)]  \n",
+        "    for __ in range(k): \n",
+        "        for j in range(1,n): \n",
+        "            p[j] += p[j-1] \n",
+        "    print(p[-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ra4whCHueLbG",
+        "outputId": "509bbb99-33b2-49e6-c300-b3525f99bcc0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "1\n",
+            "3\n",
+            "[1, 2, 3]\n",
+            "6\n",
+            "[1, 3, 6]\n",
+            "10\n",
+            "6\n",
+            "2\n",
+            "3\n",
+            "[1, 2, 3]\n",
+            "6\n",
+            "[1, 4, 10]\n",
+            "15\n",
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 10870 피보나치 수 5\n",
+        "#문제 URL : https://www.acmicpc.net/problem/10870\n",
+        "\n",
+        "input_ = int(input())    \n",
+        "\n",
+        "def Fi(num_):\n",
+        "  if num_ == 0:\n",
+        "    return 0\n",
+        "  elif num_ == 1 or num_ == 2:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    return Fi(num_ - 1) + Fi(num_ - 2)\n",
+        "print(Fi(input_))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wb4sWf-Yr7jk",
+        "outputId": "1c6beb5e-d1d9-4400-ce6c-60c216b26439"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 11047번 동전0\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11047\n",
+        "\n",
+        "a, P  = map(int,input().split()) \n",
+        "list_ = []\n",
+        "\n",
+        "for i in range(a):\n",
+        "  list_.append(int(input()))\n",
+        "list_.sort(reverse=True)\n",
+        "coin_ = 0\n",
+        "for i in list_:\n",
+        "  if P >= i:\n",
+        "    A, B = divmod(P,i)\n",
+        "    coin_ += A\n",
+        "    P = B  \n",
+        "print(coin_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XeTMcczF2Nz1",
+        "outputId": "96b7d827-bd1f-4aff-c891-e56d549fa668"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 4200\n",
+            "1\n",
+            "5\n",
+            "10\n",
+            "50\n",
+            "100\n",
+            "500\n",
+            "1000\n",
+            "5000\n",
+            "10000\n",
+            "50000\n",
+            "4\n",
+            "200\n",
+            "6\n",
+            "0\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2750번 수 정렬하기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2750\n",
+        "\n",
+        "num_ = int(input())\n",
+        "list_ = []\n",
+        "for i in range(num_):\n",
+        "  list_.append(int(input()))\n",
+        "list_.sort()\n",
+        "for i in list_:\n",
+        "  print(i)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PvqkS6ly1ZeQ",
+        "outputId": "8c3e1580-8f5e-4216-a455-293f3b7fdb9e"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5\n",
+            "2\n",
+            "1\n",
+            "4\n",
+            "3\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 2751번 수 정렬하기 2\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2751\n",
+        "\n",
+        "import sys\n",
+        " \n",
+        "num_ = int(input())\n",
+        "list_ = []\n",
+        "for i in range(num_):\n",
+        "  list_.append(int(sys.stdin.readline()))\n",
+        "for i in sorted(list_):\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "1SQqw271-sha"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
