Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM8FP2+NObCRTESzT0tKQF6",
+      "authorship_tag": "ABX9TyMFFhBTkMt2bKJUNhVG4506",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -315,6 +315,69 @@
         "id": "1SQqw271-sha"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 10989번 수 정렬하기 3\n",
+        "#문제 URL : https://www.acmicpc.net/problem/10989\n",
+        "\n",
+        "# count sort / 메모리 초과 /  양이 적을땐 최적\n",
+        "import sys\n",
+        "\n",
+        "num_ = int(input())\n",
+        "sor_list = []  \n",
+        "\n",
+        "for i in range(num_):\n",
+        "   sor_list.append(int(sys.stdin.readline()))\n",
+        "\n",
+        "list_ = [0] * 10001\n",
+        "list_[0] = sor_list.count(0)\n",
+        "for i in range(len(list_)):\n",
+        "  list_[i] = list_[i-1] + sor_list.count(i)  \n",
+        "list_ = list(map(lambda x: x - 1, list_))   \n",
+        "list_Out = [0] * 10001\n",
+        "\n",
+        "for i in reversed(range(len(sor_list))): \n",
+        "    La_ = sor_list[i]\n",
+        "    index_ = list_[La_]\n",
+        "    list_Out[index_] = La_\n",
+        "    list_[La_] = list_[La_] -1 \n",
+        "\n",
+        "for j in list_Out:\n",
+        "    print(j)\n",
+        "\n",
+        "\n",
+        "# 다른 방법\n",
+        "import sys\n",
+        "\n",
+        "n = int(input())\n",
+        "list_ = [0] * 10001 \n",
+        "for i in range(n):\n",
+        "    list_[int(sys.stdin.readline())] += 1\n",
+        "\n",
+        "for i in range(10001):\n",
+        "    if list_[i] != 0:\n",
+        "        for j in range(list_[i]):\n",
+        "            print(i)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LV6ZSwDKR2Ne"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " "
+      ],
+      "metadata": {
+        "id": "6sVtitAe_1Ab"
+      },
+      "execution_count": 15,
       "outputs": []
     }
   ]
