Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFFhBTkMt2bKJUNhVG4506",
+      "authorship_tag": "ABX9TyN2kfeimhXP7Nv56XnVqkmV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -189,7 +189,7 @@
         "id": "wb4sWf-Yr7jk",
         "outputId": "1c6beb5e-d1d9-4400-ce6c-60c216b26439"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,7 +228,7 @@
         "id": "XeTMcczF2Nz1",
         "outputId": "96b7d827-bd1f-4aff-c891-e56d549fa668"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         "id": "PvqkS6ly1ZeQ",
         "outputId": "8c3e1580-8f5e-4216-a455-293f3b7fdb9e"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,12 +372,160 @@
     {
       "cell_type": "code",
       "source": [
-        " "
+        "#백준 2108번 통계학\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2108\n",
+        "import sys\n",
+        "from collections import Counter\n",
+        "  \n",
+        "num_ = int(input())\n",
+        "list_ = []\n",
+        "for i in range(num_):\n",
+        "   list_.append(int(sys.stdin.readline())) \n",
+        "list_.sort()  \n",
+        "re_1 = round(sum(list_) / len(list_))\n",
+        "re_2 = list_[int(len(list_) // 2)] \n",
+        "re_3 = Counter(list_).most_common(2)\n",
+        "re_4 = max(list_) - min(list_)\n",
+        "\n",
+        "#결과 출력\n",
+        "print(re_1)\n",
+        "print(re_2)\n",
+        "if 1 < len(re_3):\n",
+        "  if re_3[0][1] == re_3[1][1]: \n",
+        "    print(re_3[1][0]) \n",
+        "  else: \n",
+        "    print(re_3[0][0]) \n",
+        "else:\n",
+        "  print(re_3[0][0]) \n",
+        "print(re_4)\n",
+        "\n"
       ],
       "metadata": {
         "id": "6sVtitAe_1Ab"
       },
-      "execution_count": 15,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1427번 소트인사이드\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1427\n",
+        "\n",
+        "num_ = int(input()) \n",
+        "list_ = list(map(lambda x: int(x) , str(num_)))\n",
+        "list_.sort(reverse=True)\n",
+        "print(''.join(map(str, list_)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s-2UnRuU_7Dl",
+        "outputId": "74404b88-2b44-44bc-e9ec-5a1b76f2f2a2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "51\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 11650번 좌표 정렬하기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11650\n",
+        "import sys \n",
+        "num_ = int(input())  \n",
+        "list_ = [] \n",
+        "for i in range(num_):\n",
+        "   list_.append([int(s) for s in sys.stdin.readline().split()])\n",
+        "list_.sort() \n",
+        "for i in range(0, num_):\n",
+        "  print(list_[i][0], list_[i][1])"
+      ],
+      "metadata": {
+        "id": "lc26XBb2I2oH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 11651번 좌표 정렬하기 2\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11651\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "num_ = int(sys.stdin.readline()) \n",
+        "list_ = [sys.stdin.readline().strip() for i in range(num_)] \n",
+        "list_ = list(set(list_))\n",
+        "list_.sort() \n",
+        "list_.sort(key=len)  \n",
+        "result = \"\\n\".join(list_)\n",
+        "print(result)\n",
+        " "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8B_48nhLK0BE",
+        "outputId": "6d3c6cc8-a107-4224-8fd9-08ecbc46ec63"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "aa\n",
+            "b\n",
+            "b.\n",
+            "aa\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 10814번 나이순 정렬\n",
+        "#문제 URL : https://www.acmicpc.net/problem/10814\n",
+        "\n",
+        "import sys\n",
+        "num_ = int(sys.stdin.readline()) \n",
+        "list_ = []  \n",
+        "for i in range(num_):\n",
+        "   a, b = list(map(str, input().split())) \n",
+        "   list_.append([a,b])  \n",
+        "list_.sort(key=lambda x : int(x[0]))\n",
+        "for i in range(num_):\n",
+        "  print(list_[i][0], list_[i][1]) "
+      ],
+      "metadata": {
+        "id": "ezqaA0_qMXyz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " "
+      ],
+      "metadata": {
+        "id": "RNHirhhFhOzJ"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
