Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN2kfeimhXP7Nv56XnVqkmV",
+      "authorship_tag": "ABX9TyNFh/ofnPbu9zvMQz++uFp/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -520,13 +520,35 @@
     {
       "cell_type": "code",
       "source": [
-        " "
+        "#백준 18870번 좌표 압축\n",
+        "#문제 URL : https://www.acmicpc.net/problem/18870\n",
+        "\n",
+        "num_ = int(input())\n",
+        "list_ = list(map(int, input().split()))\n",
+        "list_2 = sorted(list(set(list_)))   \n",
+        "dict_ = {list_2[i] : i for i in range(len(list_2))}\n",
+        "for i in list_:\n",
+        "    print(dict_[i], end = ' ')"
       ],
       "metadata": {
-        "id": "RNHirhhFhOzJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RNHirhhFhOzJ",
+        "outputId": "a07d0e20-14ec-4e04-cbce-30107dce1db7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "2 4 -10 4 -9\n",
+            "2 3 0 3 1 "
+          ]
+        }
+      ]
     }
   ]
 }
