Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNFh/ofnPbu9zvMQz++uFp/",
+      "authorship_tag": "ABX9TyPhEzr1VHFdQRqU5iXuSRkd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -549,6 +549,105 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1931번 회의실 배정\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1931\n",
+        "import sys\n",
+        "\n",
+        "num_ = int(input())\n",
+        "#num_ = int(sys.stdin.readline()) \n",
+        "list_ = [] \n",
+        "result_ = 0\n",
+        "for i in range(num_):\n",
+        "  A,B = list(map(int, input().split())) \n",
+        "  list_.append([A,B])\n",
+        "  #list_.append([int(s) for s in sys.stdin.readline().split()])  \n",
+        "list_.sort(key = lambda x: (x[1], x[0]))  \n",
+        "la_ = 0\n",
+        "re_ = 0\n",
+        "for i, j in list_:\n",
+        "    if i >= la_:\n",
+        "        re_ += 1\n",
+        "        la_ = j\n",
+        "print(re_) "
+      ],
+      "metadata": {
+        "id": "zd3sjxIAP-fp",
+        "outputId": "8e14f954-ba87-4203-8031-1e46e6a3244b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "5 7\n",
+            "2 3\n",
+            "1 4\n",
+            "[[5, 7], [2, 3], [1, 4]]\n",
+            "[[1, 4], [2, 3], [5, 7]]\n",
+            "[5, 7]\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 11399번 ATM\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11399\n",
+        "\n",
+        "num_ = int(input())\n",
+        "list_ = map(int,input().split())\n",
+        "dict_ = {}\n",
+        "for i, d in enumerate(list_):\n",
+        "  dict_[i] = d \n",
+        "dict_ = sorted(dict_.items(), key=(lambda x: x[1]))  \n",
+        "sum_ = 0\n",
+        "list2_ = []\n",
+        "for i in dict_:\n",
+        "  sum_ += i[1]\n",
+        "  list2_.append(sum_)\n",
+        "print(sum(list2_))"
+      ],
+      "metadata": {
+        "id": "HCZsbmxbRAAX",
+        "outputId": "150a29d8-b316-4d61-8dc1-6122ecfb5ad8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "3 1 4 3 2\n",
+            "32\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "vMWvvx5OlzWf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
