Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "BaekJoonCode.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyPhEzr1VHFdQRqU5iXuSRkd",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -29,6 +12,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GitDNhRMrpZQ",
+        "outputId": "fb2aba5a-8345-435e-f0ec-4ce489177e15"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1000 70 170\n",
+            "11\n"
+          ]
+        }
+      ],
       "source": [
         "#백준 손익분기점\n",
         "A, B , C = map(int, input().split())\n",
@@ -37,28 +38,15 @@
         "  print(-1) \n",
         "else:\n",
         "  print(int(A//(C-B)+1)) "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GitDNhRMrpZQ",
-        "outputId": "fb2aba5a-8345-435e-f0ec-4ce489177e15"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1000 70 170\n",
-            "11\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nCoBoSk5eDiF"
+      },
+      "outputs": [],
       "source": [
         "#백준 2282번 벌집\n",
         "#문제 URL : https://www.acmicpc.net/problem/2292\n",
@@ -72,15 +60,29 @@
         "  house_ += 6 * move_\n",
         "  move_ += 1\n",
         "print(move_)"
-      ],
-      "metadata": {
-        "id": "nCoBoSk5eDiF"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0X_uc-dqfDSW",
+        "outputId": "48eb86c6-55af-4d87-8c86-1b81c5e45402"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "30 50 72\n",
+            "1203\n"
+          ]
+        }
+      ],
       "source": [
         "#백준 10250번 ACM 호텔\n",
         "#문제 URL : https://www.acmicpc.net/problem/10250\n",
@@ -96,43 +98,11 @@
         "        F = a\n",
         "  print(f'{F*100+H}')\n",
         " \n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "0X_uc-dqfDSW",
-        "outputId": "48eb86c6-55af-4d87-8c86-1b81c5e45402"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n",
-            "30 50 72\n",
-            "1203\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#백준 2775번 부녀회장이 될테야\n",
-        "#문제 URL : https://www.acmicpc.net/problem/2775\n",
-        "\n",
-        "Num_ = int(input()) \n",
-        "for _ in range(Num_): \n",
-        "    k = int(input()) \n",
-        "    n = int(input())  \n",
-        "    p = [ i for i in range(1, n+1)]  \n",
-        "    for __ in range(k): \n",
-        "        for j in range(1,n): \n",
-        "            p[j] += p[j-1] \n",
-        "    print(p[-1])"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -140,11 +110,10 @@
         "id": "Ra4whCHueLbG",
         "outputId": "509bbb99-33b2-49e6-c300-b3525f99bcc0"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2\n",
             "1\n",
@@ -163,10 +132,42 @@
             "10\n"
           ]
         }
+      ],
+      "source": [
+        "#백준 2775번 부녀회장이 될테야\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2775\n",
+        "\n",
+        "Num_ = int(input()) \n",
+        "for _ in range(Num_): \n",
+        "    k = int(input()) \n",
+        "    n = int(input())  \n",
+        "    p = [ i for i in range(1, n+1)]  \n",
+        "    for __ in range(k): \n",
+        "        for j in range(1,n): \n",
+        "            p[j] += p[j-1] \n",
+        "    print(p[-1])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wb4sWf-Yr7jk",
+        "outputId": "1c6beb5e-d1d9-4400-ce6c-60c216b26439"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "55\n"
+          ]
+        }
+      ],
       "source": [
         "#백준 10870 피보나치 수 5\n",
         "#문제 URL : https://www.acmicpc.net/problem/10870\n",
@@ -181,46 +182,11 @@
         "  else:\n",
         "    return Fi(num_ - 1) + Fi(num_ - 2)\n",
         "print(Fi(input_))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wb4sWf-Yr7jk",
-        "outputId": "1c6beb5e-d1d9-4400-ce6c-60c216b26439"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "10\n",
-            "55\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#백준 11047번 동전0\n",
-        "#문제 URL : https://www.acmicpc.net/problem/11047\n",
-        "\n",
-        "a, P  = map(int,input().split()) \n",
-        "list_ = []\n",
-        "\n",
-        "for i in range(a):\n",
-        "  list_.append(int(input()))\n",
-        "list_.sort(reverse=True)\n",
-        "coin_ = 0\n",
-        "for i in list_:\n",
-        "  if P >= i:\n",
-        "    A, B = divmod(P,i)\n",
-        "    coin_ += A\n",
-        "    P = B  \n",
-        "print(coin_)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -228,11 +194,10 @@
         "id": "XeTMcczF2Nz1",
         "outputId": "96b7d827-bd1f-4aff-c891-e56d549fa668"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "10 4200\n",
             "1\n",
@@ -252,22 +217,29 @@
             "6\n"
           ]
         }
+      ],
+      "source": [
+        "#백준 11047번 동전0\n",
+        "#문제 URL : https://www.acmicpc.net/problem/11047\n",
+        "\n",
+        "a, P  = map(int,input().split()) \n",
+        "list_ = []\n",
+        "\n",
+        "for i in range(a):\n",
+        "  list_.append(int(input()))\n",
+        "list_.sort(reverse=True)\n",
+        "coin_ = 0\n",
+        "for i in list_:\n",
+        "  if P >= i:\n",
+        "    A, B = divmod(P,i)\n",
+        "    coin_ += A\n",
+        "    P = B  \n",
+        "print(coin_)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#백준 2750번 수 정렬하기\n",
-        "#문제 URL : https://www.acmicpc.net/problem/2750\n",
-        "\n",
-        "num_ = int(input())\n",
-        "list_ = []\n",
-        "for i in range(num_):\n",
-        "  list_.append(int(input()))\n",
-        "list_.sort()\n",
-        "for i in list_:\n",
-        "  print(i)\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -275,11 +247,10 @@
         "id": "PvqkS6ly1ZeQ",
         "outputId": "8c3e1580-8f5e-4216-a455-293f3b7fdb9e"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "5\n",
             "5\n",
@@ -294,10 +265,27 @@
             "5\n"
           ]
         }
+      ],
+      "source": [
+        "#백준 2750번 수 정렬하기\n",
+        "#문제 URL : https://www.acmicpc.net/problem/2750\n",
+        "\n",
+        "num_ = int(input())\n",
+        "list_ = []\n",
+        "for i in range(num_):\n",
+        "  list_.append(int(input()))\n",
+        "list_.sort()\n",
+        "for i in list_:\n",
+        "  print(i)\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "1SQqw271-sha"
+      },
+      "outputs": [],
       "source": [
         "#백준 2751번 수 정렬하기 2\n",
         "#문제 URL : https://www.acmicpc.net/problem/2751\n",
@@ -310,15 +298,15 @@
         "  list_.append(int(sys.stdin.readline()))\n",
         "for i in sorted(list_):\n",
         "  print(i)"
-      ],
-      "metadata": {
-        "id": "1SQqw271-sha"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "LV6ZSwDKR2Ne"
+      },
+      "outputs": [],
       "source": [
         "#백준 10989번 수 정렬하기 3\n",
         "#문제 URL : https://www.acmicpc.net/problem/10989\n",
@@ -362,15 +350,15 @@
         "        for j in range(list_[i]):\n",
         "            print(i)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "LV6ZSwDKR2Ne"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6sVtitAe_1Ab"
+      },
+      "outputs": [],
       "source": [
         "#백준 2108번 통계학\n",
         "#문제 URL : https://www.acmicpc.net/problem/2108\n",
@@ -399,15 +387,28 @@
         "  print(re_3[0][0]) \n",
         "print(re_4)\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "6sVtitAe_1Ab"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s-2UnRuU_7Dl",
+        "outputId": "74404b88-2b44-44bc-e9ec-5a1b76f2f2a2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "15\n",
+            "51\n"
+          ]
+        }
+      ],
       "source": [
         "#백준 1427번 소트인사이드\n",
         "#문제 URL : https://www.acmicpc.net/problem/1427\n",
@@ -416,28 +417,15 @@
         "list_ = list(map(lambda x: int(x) , str(num_)))\n",
         "list_.sort(reverse=True)\n",
         "print(''.join(map(str, list_)))\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "s-2UnRuU_7Dl",
-        "outputId": "74404b88-2b44-44bc-e9ec-5a1b76f2f2a2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "15\n",
-            "51\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lc26XBb2I2oH"
+      },
+      "outputs": [],
       "source": [
         "#백준 11650번 좌표 정렬하기\n",
         "#문제 URL : https://www.acmicpc.net/problem/11650\n",
@@ -449,15 +437,31 @@
         "list_.sort() \n",
         "for i in range(0, num_):\n",
         "  print(list_[i][0], list_[i][1])"
-      ],
-      "metadata": {
-        "id": "lc26XBb2I2oH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8B_48nhLK0BE",
+        "outputId": "6d3c6cc8-a107-4224-8fd9-08ecbc46ec63"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "aa\n",
+            "b\n",
+            "b.\n",
+            "aa\n"
+          ]
+        }
+      ],
       "source": [
         "#백준 11651번 좌표 정렬하기 2\n",
         "#문제 URL : https://www.acmicpc.net/problem/11651\n",
@@ -472,31 +476,15 @@
         "result = \"\\n\".join(list_)\n",
         "print(result)\n",
         " "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8B_48nhLK0BE",
-        "outputId": "6d3c6cc8-a107-4224-8fd9-08ecbc46ec63"
-      },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2\n",
-            "aa\n",
-            "b\n",
-            "b.\n",
-            "aa\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ezqaA0_qMXyz"
+      },
+      "outputs": [],
       "source": [
         "#백준 10814번 나이순 정렬\n",
         "#문제 URL : https://www.acmicpc.net/problem/10814\n",
@@ -510,15 +498,30 @@
         "list_.sort(key=lambda x : int(x[0]))\n",
         "for i in range(num_):\n",
         "  print(list_[i][0], list_[i][1]) "
-      ],
-      "metadata": {
-        "id": "ezqaA0_qMXyz"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "background_save": true,
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        },
+        "id": "RNHirhhFhOzJ",
+        "outputId": "329bae73-1c4f-4654-99d8-775464cc15ac"
+      },
+      "outputs": [
+        {
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-90-0829629ff6df>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    for i in list_:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ],
       "source": [
         "#백준 18870번 좌표 압축\n",
         "#문제 URL : https://www.acmicpc.net/problem/18870\n",
@@ -529,25 +532,6 @@
         "dict_ = {list_2[i] : i for i in range(len(list_2))}\n",
         "for i in list_:\n",
         "    print(dict_[i], end = ' ')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RNHirhhFhOzJ",
-        "outputId": "a07d0e20-14ec-4e04-cbce-30107dce1db7"
-      },
-      "execution_count": 95,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "5\n",
-            "2 4 -10 4 -9\n",
-            "2 3 0 3 1 "
-          ]
-        }
       ]
     },
     {
@@ -572,32 +556,13 @@
         "    if i >= la_:\n",
         "        re_ += 1\n",
         "        la_ = j\n",
-        "print(re_) "
+        "print(re_)"
       ],
       "metadata": {
-        "id": "zd3sjxIAP-fp",
-        "outputId": "8e14f954-ba87-4203-8031-1e46e6a3244b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "WUm_-y3_DR4m"
       },
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "3\n",
-            "5 7\n",
-            "2 3\n",
-            "1 4\n",
-            "[[5, 7], [2, 3], [1, 4]]\n",
-            "[[1, 4], [2, 3], [5, 7]]\n",
-            "[5, 7]\n",
-            "2\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -619,21 +584,39 @@
         "print(sum(list2_))"
       ],
       "metadata": {
-        "id": "HCZsbmxbRAAX",
-        "outputId": "150a29d8-b316-4d61-8dc1-6122ecfb5ad8",
+        "id": "AevtM48gDTgq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 1541번 잃어버린 괄호\n",
+        "#문제 URL : https://www.acmicpc.net/problem/1541\n",
+        "from functools import reduce\n",
+        "\n",
+        "list_ = input().split(\"-\")\n",
+        "re_ = int(reduce(lambda x, y: int(x) + int(y), list_[0].split(\"+\"))) \n",
+        "for i in list_[1:]:\n",
+        "    re_ -= int(reduce(lambda x, y: int(x) + int(y), i.split(\"+\")))  \n",
+        "print(re_)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LNZuw6PfDT75",
+        "outputId": "91d5f70b-e3db-4b63-ee54-bdc170fe6d87"
       },
-      "execution_count": 54,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n",
-            "3 1 4 3 2\n",
-            "32\n"
+            "55-50+40\n",
+            "-35\n"
           ]
         }
       ]
@@ -641,13 +624,30 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "\n"
       ],
       "metadata": {
-        "id": "vMWvvx5OlzWf"
+        "id": "u7RAY1sWMzKx"
       },
       "execution_count": null,
       "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "BaekJoonCode.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyPjZJIkPZhLxnjz9s+oLV0i",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
