--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -624,10 +624,67 @@
     {
       "cell_type": "code",
       "source": [
-        "\n"
+        "#백준 13305번 주유소\n",
+        "#문제 URL : https://www.acmicpc.net/problem/13305\n",
+        "\n",
+        "num_ = int(input())\n",
+        "load_ =list(map(int,input().split())) \n",
+        "city_ =list(map(int,input().split())) \n",
+        "\n",
+        "re_ = []\n",
+        "if city_[0] == min(city_):\n",
+        "  print(city_[0] * sum(load_))\n",
+        "else:\n",
+        "  co_ = city_[0]\n",
+        "  for i in range(1,num_):\n",
+        "    if co_ < city_[i]:\n",
+        "      re_.append(co_ * load_[i-1])\n",
+        "    else:\n",
+        "      re_.append(co_ * load_[i-1])\n",
+        "      co_ = city_[i]\n",
+        "  print(sum(re_))\n"
       ],
       "metadata": {
-        "id": "u7RAY1sWMzKx"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u7RAY1sWMzKx",
+        "outputId": "283f5e6e-0b8c-4ba1-a001-a93e75d77394"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "3 3 4\n",
+            "1 1 1 1\n",
+            "10\n",
+            "0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 9012번 괄호\n",
+        "#문제 URL : https://www.acmicpc.net/problem/9012\n",
+        "\n",
+        "num_ = int(input()) \n",
+        "for i in range(num_):\n",
+        "  str_ = input()\n",
+        "  for _ in range(len(str_)):\n",
+        "    str_= str_.replace(\"()\",\"\")\n",
+        "  if str_ == '':\n",
+        "    print('YES')\n",
+        "  else:\n",
+        "    print('NO')\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "yhxK7suRYz8l"
       },
       "execution_count": null,
       "outputs": []
@@ -637,7 +694,7 @@
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPjZJIkPZhLxnjz9s+oLV0i",
+      "authorship_tag": "ABX9TyNs1KD7btdueHTaojc28yn+",
       "include_colab_link": true
     },
     "kernelspec": {
