Colaboratory를 통해 생성됨

--- a/BaekJoonCode.ipynb
+++ b/BaekJoonCode.ipynb
@@ -609,7 +609,7 @@
         "id": "LNZuw6PfDT75",
         "outputId": "91d5f70b-e3db-4b63-ee54-bdc170fe6d87"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,7 +651,7 @@
         "id": "u7RAY1sWMzKx",
         "outputId": "283f5e6e-0b8c-4ba1-a001-a93e75d77394"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -688,13 +688,52 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#백준 4949번 균형잡힌 세상\n",
+        "#문제 URL : https://www.acmicpc.net/problem/4949\n",
+        " \n",
+        "while True: \n",
+        "  str_ = input() \n",
+        "  if str_ == '.':\n",
+        "    break  \n",
+        "  bool_= True\n",
+        "  list_ = []\n",
+        "  for i in str_:\n",
+        "    if i =='(' or i =='[':\n",
+        "      list_.append(i)\n",
+        "    elif i == ')':\n",
+        "      if not list_ or list_[-1] == '[':\n",
+        "        bool_ = False\n",
+        "        break\n",
+        "      elif list_[-1] == '(':\n",
+        "        list_.pop()\n",
+        "    elif i == ']':\n",
+        "      if not list_ or list_[-1] == '(':\n",
+        "        bool_ = False\n",
+        "        break\n",
+        "      elif list_[-1] == '[':\n",
+        "        list_.pop()\n",
+        "  if bool_ and not list_:\n",
+        "    print('yes')\n",
+        "  else:\n",
+        "    print('no')\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "kb6WMRkasJVA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "name": "BaekJoonCode.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNs1KD7btdueHTaojc28yn+",
+      "authorship_tag": "ABX9TyMmXR8yRWWUUT0FOcnM1cJ1",
       "include_colab_link": true
     },
     "kernelspec": {
